# fastapi-rag-mastery

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/modules/beginner/: router.py  schemas.py
app/modules/beginner/repository/: chroma_repository.py
app/modules/beginner/service/: rag_service.py
